Update JS/CSS/HTML - Création/modification de page simple start & end basique - Ajout de variations de backgrounds(good, neutre, bad) - Modification du JS de méthode chooseBkgdImgSrc pour réfléter plus de variations background - Modification du JS pour UI/UX (centrer div quiz, overlay lorsqu'on voit l'explication, mettre en couleur le choix cliqué) & clean up - Modification de l'html pour UI/UX (div Main contenant quizz à taille unique, typo, couleurs, retrait border-color pour pas distraire de l'illustration background) & clean up

--- a/end.html
+++ b/end.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech or Trees</title>
-    <link rel="stylesheet" href="./styleStart.css"> 
+    <link rel="stylesheet" href="./styleStart.css"> <!-- Link to your CSS file -->
     <script src="./stylestart.js" defer></script>
 </head>
+
 <body>
-    <div id="overlay"></div><!-- Removed as background image is also removed -->
-    
+    <div id="overlay"></div>
+
     <main>
         <div class="container" id="container">
             <div class="logo" id="logo">
                 <img src="./assets/Tech_or_trees_logo_white.png" alt="Game Logo">
             </div>
             <p class="brief" id="brief">
-                Every choice you make has a direct <span>impact on our planet</span>.<br>Will you prioritize tech comfort or durable solutions?
-            </p>
-            <button class="start-button" id="startButton">Start</button>
+                Thank you for playing!<br><br>♫꒰･‿･๑꒱</p>
         </div>
     </main>
 </body>
+
 </html>
